kubernetes/apps/base/media/media-ottawa/radarr-4k/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-4k
  annotations:
    item.homer.rajsingh.info/name: Radarr 4K
    item.homer.rajsingh.info/subtitle: Movie Collection Manager
    item.homer.rajsingh.info/logo: https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/radarr.svg
    item.homer.rajsingh.info/keywords: tv, series, automation
    service.homer.rajsingh.info/name: Media
    service.homer.rajsingh.info/icon: fas fa-tv
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private
    namespace: home
    sectionName: ${CLUSTER_DOMAIN_LISTENER}
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ts
    namespace: home
    sectionName: ${CLUSTER_DOMAIN_LISTENER}
  hostnames:
  - radarr-4k.${CLUSTER_DOMAIN}
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: radarr-4k
      port: 7878
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
